--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -28,12 +29,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
