🐛 fix: eslint 규칙 너무 가혹해서 let사용가능

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
     ],
     "react/react-in-jsx-scope": "off", // React 17 이상에서 필요 없음
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }] // .tsx 파일에서 JSX 허용
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }], // .tsx 파일에서 JSX 허용
+    "prefer-const": "off"
   }
 }
