--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
       { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
     ],
     "react/react-in-jsx-scope": "off", // React 17 이상에서 필요 없음
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }], // .tsx 파일에서 JSX 허용
+    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }], // .tsx 파일에서 JSX 허용
+    "import/extensions": "off",
     "prefer-const": "off"
   }
 }
