✨feat: 랜딩페이지 피그마 디자인 적용

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,15 @@
 {
+  "tailwindCSS.experimental.classRegex": [["classnames\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]],
+  "tailwindCSS.includeLanguages": {
+    "typescript": "javascript",
+    "typescriptreact": "javascript"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "files.associations": {
+    "*.html": "html",
+    "*.css": "tailwindcss"
+  },
+  "tailwindCSS.emmetCompletions": true
 }
