--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.4",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
