✨ feat : 핸들러 적용 및 조건부 버튼 기능 적용

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,14 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "no-console": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
     ],
     "react/react-in-jsx-scope": "off", // React 17 이상에서 필요 없음
+    "react/jsx-filename-extension": [1, { "extensions": [".ts", ".tsx"] }], // .tsx 파일에서 JSX 허용
     "import/extensions": "off",
     "prefer-const": "off",
     "react/jsx-props-no-spreading": "off", //  JSX에서 props spreading을 허용
