--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,12 @@
     "react/button-has-type": "off", // <button> 요소에 type 속성을 명시적으로 지정하지 않아도 되도록 함
     "react/require-default-props": "off", // 기본 props를 요구하지 않도록 비활성화 (TypeScript를 사용하기 때문에 필요 없음)
     "prefer-arrow-callback": "off" // 콜백 함수에서 화살표 함수를 강제하지 않음
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
