--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
+    "css-loader": "^7.1.2",
     "dayjs": "^1.11.11",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
@@ -24,9 +25,13 @@
     "intellisense": "^0.0.1",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "postcss-loader": "^8.1.1",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-quill": "^2.0.0",
+    "style-loader": "^4.0.0",
     "swiper": "^11.1.4",
     "tailwind": "^4.0.0",
     "yarn": "^1.22.22"
