--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "framer-motion": "^11.2.12",
     "intellisense": "^0.0.1",
     "next": "14.2.4",
     "react": "^18",
