--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-responsive": "^10.0.0",
     "swiper": "^11.1.4",
     "tailwind": "^4.0.0",
     "yarn": "^1.22.22"
