--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.2.12",
     "intellisense": "^0.0.1",
     "lodash": "^4.17.21",
+    "marked": "^13.0.2",
     "next": "14.2.4",
     "postcss-loader": "^8.1.1",
     "quill": "^2.0.2",
