--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BASE_URL = "https://wikied-api.vercel.app/6-8/"
-VERCEL_URL = "https://wekit-bucket.vercel.app"
+MINCEL_URL = "https://wekit-bucket.vercel.app"
