--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "framer-motion": "^11.2.12",
     "intellisense": "^0.0.1",
     "lodash": "^4.17.21",
-    "marked": "^13.0.2",
     "lottie-react": "^2.4.0",
+    "marked": "^13.0.2",
     "next": "14.2.4",
     "postcss-loader": "^8.1.1",
     "quill": "^2.0.2",
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.52.0",
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
     "style-loader": "^4.0.0",
     "styled-components": "^6.1.11",
@@ -57,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/turndown": "^5.0.4",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
