--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-intersection-observer": "^9.10.3",
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "style-loader": "^4.0.0",
