♻️ Refactor: 에디터 추가

--- a/package.json
+++ b/package.json
@@ -12,22 +12,18 @@
     "postpack": "pinst --enable"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-basic-styles": "^42.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^42.0.0",
     "@ckeditor/ckeditor5-core": "^42.0.0",
-    "@ckeditor/ckeditor5-editor-classic": "^42.0.0",
-    "@ckeditor/ckeditor5-essentials": "^42.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^42.0.0",
     "@ckeditor/ckeditor5-react": "^8.0.0",
-    "@ckeditor/ckeditor5-watchdog": "^42.0.0",
+    "@ckeditor/ckeditor5-upload": "^42.0.0",
+    "@ckeditor/ckeditor5-utils": "^42.0.0",
     "@mantine/hooks": "^7.11.1",
     "@svgr/webpack": "^8.1.0",
     "@types/quill": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
-    "@uiw/react-md-editor": "^4.0.4",
     "@xeger/quill-image-actions": "^0.7.2",
     "busboy": "^1.6.0",
+    "ckeditor5": "^42.0.0",
     "compressorjs": "^1.2.1",
     "css-loader": "^7.1.2",
     "dayjs": "^1.11.11",
