--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-html-parser": "^2.0.2",
     "react-intersection-observer": "^9.10.3",
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
