--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ckeditor/ckeditor5-upload": "^42.0.0",
     "@svgr/webpack": "^8.1.0",
     "@types/quill": "^2.0.14",
+    "@types/react-html-parser": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@xeger/quill-image-actions": "^0.7.2",
@@ -45,8 +46,10 @@
     "react-hook-form": "^7.52.0",
     "react-html-parser": "^2.0.2",
     "react-intersection-observer": "^9.10.3",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
+    "rehype-raw": "^7.0.0",
     "style-loader": "^4.0.0",
     "swiper": "^11.1.4",
     "tailwind": "^4.0.0",
